Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/Service_Charge__c.object-meta.xml
<CustomObject>
    <label>Service Charge</label>
    <nameField>
        <displayFormat>SERCH-{000000}</displayFormat>
        <label>Service  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>