Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Charges</relationshipLabel>
    <relationshipName>Service_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>