Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Service Charges</relationshipLabel>
    <relationshipName>Service_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>