Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Service Charges</relationshipLabel>
    <relationshipName>Service_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>