Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/fields/Plumber__c.field-meta.xml
<CustomField>
    <fullName>Plumber__c</fullName>
    <label>Plumber</label>
    <length>200</length>
    <type>Text</type>
</CustomField>