Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/fields/Plumber_Name__c.field-meta.xml
<CustomField>
    <fullName>Plumber_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plumber Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>