Partial_14Dec2021/force-app/main/default/objects/Service_Charge__c/fields/Service_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>